Fix rendering on mobile.

--- a/static/src/components/App.css
+++ b/static/src/components/App.css
@@ -13,12 +13,11 @@
 }
 
 .App-content {
-  width: 500px;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-flow: column;
   align-items: center;
-  margin-top: -200px;
 }
 
 .App-logo {
